--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
   angular2: 2.0.0-beta.16
   browser: ^0.10.0
   dart_to_js_script_rewriter: ^1.0.1
+  bootstrap: ^3.3.4
 transformers:
 - angular2:
     platform_directives:
@@ -15,3 +16,5 @@ transformers:
     - 'package:angular2/common.dart#COMMON_PIPES'
     entry_points: web/main.dart
 - dart_to_js_script_rewriter
+- bootstrap:
+    url: //maxcdn.bootstrapcdn.com/bootstrap/3.3.4
