--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,11 @@ version: 0.0.1
 environment:
   sdk: '>=1.13.0 <2.0.0'
 dependencies:
-  angular2: 2.0.0-beta.16
+  angular2: 2.0.0-beta.17
   browser: ^0.10.0
   dart_to_js_script_rewriter: ^1.0.1
-  bootstrap: ^3.3.4
+  material_design_lite: "^1.1.3-1"
+
 transformers:
 - angular2:
     platform_directives:
@@ -16,5 +17,3 @@ transformers:
     - 'package:angular2/common.dart#COMMON_PIPES'
     entry_points: web/main.dart
 - dart_to_js_script_rewriter
-- bootstrap:
-    url: //maxcdn.bootstrapcdn.com/bootstrap/3.3.4
